--- a/dashboard.html
+++ b/dashboard.html
@@ -198,7 +198,7 @@
 </div>            
          <div class="flex-1 flex flex-col overflow-hidden">
            
-             <main class="flex-1 bg-white z-50 overflow-y-auto">
+             <main class="flex-1 bg-white overflow-y-auto">
 
                <header class="flex justify-between items-center p-20 bg-subheader">
          
@@ -331,11 +331,11 @@
                            <div class="mt-4 flex justify-end">
                               <div class="flex rounded-md bg-white py-4 px-4 overflow-x-auto">
                                   <div class="flex rounded mr-4">
-                                      <a href="#" class="py-2 px-3 leading-tight bg-white border border-gray-200 text-blue-700 border-r-0 ml-0 rounded-l hover:bg-indigo-500 hover:text-white"><span>Previous</span></a>
-                                      <a href="#" class="py-2 px-3 leading-tight bg-white border border-gray-200 text-blue-700 border-r-0 hover:bg-indigo-500 hover:text-white"><span>1</span></a>
-                                      <a href="#" class="py-2 px-3 leading-tight bg-white border border-gray-200 text-blue-700 border-r-0 hover:bg-indigo-500 hover:text-white"><span>2</span></a>
-                                      <a href="#" class="py-2 px-3 leading-tight bg-white border border-gray-200 text-blue-700 border-r-0 hover:bg-indigo-500 hover:text-white"><span>3</span></a>
-                                      <a href="#" class="py-2 px-3 leading-tight bg-white border border-gray-200 text-blue-700 rounded-r hover:bg-indigo-500 hover:text-white"><span>Next</span></a>
+                                      <a href="#" class="py-2 px-3 leading-tight bg-white border border-gray-200 text-primary border-r-0 ml-0 rounded-l hover:bg-primary-alt hover:text-white"><span>Previous</span></a>
+                                      <a href="#" class="py-2 px-3 leading-tight bg-white border border-gray-200 text-primary border-r-0 hover:bg-primary-alt hover:text-white"><span>1</span></a>
+                                      <a href="#" class="py-2 px-3 leading-tight bg-white border border-gray-200 text-primary border-r-0 hover:bg-primary-alt hover:text-white"><span>2</span></a>
+                                      <a href="#" class="py-2 px-3 leading-tight bg-white border border-gray-200 text-primary border-r-0 hover:bg-primary-alt hover:text-white"><span>3</span></a>
+                                      <a href="#" class="py-2 px-3 leading-tight bg-white border border-gray-200 text-primary rounded-r hover:bg-primary-alt hover:text-white"><span>Next</span></a>
                                   </div>
                               </div>
                           </div>
@@ -344,8 +344,8 @@
 
                      <div class="w-full flex justify-between mt-10 mb-5">
                         <h2 class="font-bold break-normal text-gray-900 text-2xl md:text-xl">FROM YOUR MERCHANTS</h2>
-                        <button class="bg-transparent hover:bg-gray-200 text-blue-900 font-semibold hover:text-blue-700 hover:bg-gray-300 py-2 px-4 border border-blue-500 rounded">
-                           More
+                        <button class="-mt-2 bg-transparent hover:shadow-lg hover:bg-gray-200 focus:outline-none text-primary font-semibold  hover:bg-gray-200 py-2 px-4 border border-primary px-8 rounded">
+                           MORE
                          </button>
                      </div>
                      <div class="grid mx-auto  grid-cols-4  gap-4 merchantslide">
