--- a/login.html
+++ b/login.html
@@ -15,8 +15,8 @@
 <body class="bg-white font-family-karla h-screen">
 
     <div class="w-full flex flex-wrap">
-    <div class="w-1/2 shadow-2xl">
-            <img class="object-cover w-full h-screen hidden md:block" src="https://source.unsplash.com/IXUM4cJynP0">
+    <div class="w-1/2 shadow-2xl bg-login">
+            <img class="object-cover w-full hidden md:block" src="assets/img/live-actionb.jpg">
         </div>
         <!-- Login Section -->
         <div class="w-full md:w-1/2 flex flex-col">
