--- a/merchant.html
+++ b/merchant.html
@@ -66,8 +66,8 @@
                                     <p class="text-gray-400 text-sm p-2 mb-2">Hi, Username</p>
                                      <a href="dashboard.html" class="p-2 hover:bg-primary-alt text-white text-sm no-underline hover:no-underline block"><i class="fa fa-user fa-fw"></i> Account</a>
                                      <a href="#" class="p-2 hover:bg-primary-alt text-white text-sm no-underline hover:no-underline block"><i class="fa fa-cog fa-fw"></i> Settings</a>
-                                     <div class="border border-gray-800"></div>
-                                     <a href="login.html" class="p-2 hover:bg-primary-alt text-white text-sm no-underline hover:no-underline block"><i class="fas fa-sign-out-alt fa-fw"></i> Log Out</a>
+                                     
+                                     <a href="login.html" class="p-2 hover:bg-primary-alt text-white text-sm no-underline hover:no-underline block"><i class="fas fa-sign-out-alt fa-fw"></i> <i class="fa fa-lock fa-fw"></i> Log Out</a>
                                  </div>
                              </div>
                          </li>
