--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
          </div>
             
          </nav>
-         <div class="collapse navbar-collapse" id="navbarColor02">
+         <div class="collapse d-xl-block d-lg-block d-md-block navbar-collapse" id="navbarColor02">
             <div  class="w-full bg-primary-alt shadow-md  lg:block md:block">
                <ul class="container mx-auto list-reset flex:column lg:flex md:flex xs:flex text-xs bounce-in-right">
               
