--- a/bank.html
+++ b/bank.html
@@ -14,7 +14,7 @@
      
   </head>
    <body class="tracking-wider tracking-normal">
-    <header class="w-full z-10 top-0 bg-primary py-1">
+    <header class="w-full z-10 top-0 bg-primary pt-1">
       <nav class="navbar container navbar-expand-lg"> 
          <a href="/" class="navbar-brand r-mauto" href="#" data-abc="true">
             <img src="assets/img/logo.png" /> 
