--- a/login.html
+++ b/login.html
@@ -18,13 +18,13 @@
 <div class="w-full">
 
     <div class="row">
-<div class="col-lg-6 col-md-6 bg-signup"></div>
-<div class="col-lg-6 col-md-6 p-0 bg-relogin">
+<div class="col-lg-6 min-h-full col-md-6 bg-signup"></div>
+<div class="col-lg-6 min-h-screen col-md-6 p-0 bg-relogin">
 
 <div class="row justify-content-center">
 
     <div class="col-lg-10">
-        <div class="card border-0 m-5 shadow-lg">
+        <div class="card bg-trams-resp border-0 m-5 shadow-lg">
             <div class="card-body">
     
                 <div class="row justify-content-center">
@@ -34,7 +34,7 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-12 mt-4 mb-3">
-                        <p class="text-center text-capitalize text-bold text-2xl font-bold">WELCOME BACK</p>
+                        <p class="text-center text-capitalize text-bold text-secondary-resp text-2xl font-bold">WELCOME BACK</p>
                     </div>
     
     <div class="row justify-content-center">
