--- a/register.html
+++ b/register.html
@@ -15,11 +15,11 @@
     </head>
 <body>
 
-<div class="w-full">
+<div class="container-fluid p-0">
 
-    <div class="row">
+    <div class="row align-self-center">
 <div class="col-lg-6 min-h-full  col-md-6 bg-signup"></div>
-<div class="col-lg-6 min-h-full col-md-6 p-0 bg-relogin">
+<div class="col-lg-6 min-h-full my-auto mx-auto  col-md-6 p-0 bg-relogin">
 
     <div class="row justify-content-center">
 
@@ -93,5 +93,28 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
