--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                <img src="assets/img/logo.png" /> 
             </a> 
          
-         <div class="row w-full">
+         <div class="row m-auto w-full">
             <div class="col-lg-9">
                <input type="search" placeholder="Search games, odds or leagues" class="w-full bg-gray-100 text-sm text-gray-800 transition border focus:outline-none focus:shadow-lg focus:bg-gray-300 rounded py-2 px-2 pl-3 appearance-none leading-normal pr-6">
                <div class="absolute search-icon" style="top: 0.4px;right: 15px;">
