--- a/login.html
+++ b/login.html
@@ -54,7 +54,7 @@
         </div>
         <div class="col-lg-9 col-md-9 col-sm-10 col-xs-10 px-5-responsive">
             <div class="text-center pt-2 mb-5">
-                <p class="font-light text-light-resp">Don't have an account? <a href="register.html" class="underline text-secondary-resp font-semibold">Sign up</a></p>
+                <p class="font-light text-light-resp">Don't have an account? <a href="register.html" class="underline text-secondary-resp font-semibold">Sign&nbsp;up</a></p>
             </div>
         </div>
     
