--- a/index.html
+++ b/index.html
@@ -78,9 +78,95 @@
               
                   <li class="mr-6 text-gray-200">
                      <a href="#" class="p-3 block hover:bg-primary">
-                        <svg class="inline fill-current text-teal-lightest h-4 pr-1 md:pr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-                           <path d="M6 6V2c0-1.1.9-2 2-2h10a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-4v4a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V8c0-1.1.9-2 2-2h4zm2 0h4a2 2 0 0 1 2 2v4h4V2H8v4zM2 8v10h10V8H2z"></path>
+
+                        <svg class="ic-msize" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                            viewBox="0 0 258 258" style="enable-background:new 0 0 258 258;" xml:space="preserve">
+                        <image style="overflow:visible;enable-background:new    ;" width="246" height="246" xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPYAAAD2CAYAAADlEnrIAAAACXBIWXMAAAsSAAALEgHS3X78AAAA
+                        GXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAEchJREFUeNrsnetx28gSRgHU/jcd
+                        waUiMBWBoAgsRWAyAksRyIpAUgSkIxA3AtERkIrAvBGIjkB3Wmz4wjIfeGMe56vCirW1a4s9ffB1
+                        zwwGcYSc0+vr68j8GJhrqJfog7lGe/6X/H+31muXfuQ+r8y1kSuO4xVRd0sxIbAW3jQH5CcFOe3x
+                        V9rkYH/Wz2ugB2x0GOJUAR4ecF5btdLrDXgD+4JRBezQIB7mIE4dhLgM7Ast7xcG9g2jD9i+wXxh
+                        fpx5DnJR0P/F0QHbdVf+bK4LIrKzX3+D3Fxz3BywbYdZIP4SsCtX1RzIAdsmmAcKM87cMOQG8Bmh
+                        AOyugRZH/qowD4hIa+W6QP7Akhpgd+HON9H/N3ugbrRSwHFxwG60dxZ3HuPOVrj4g7nu6cUBu265
+                        PSYaVkrc+9YAviYUgF0E6FTL7ZRoADhgAzQCcMC2rIe+i1iuAnDA9gLogQJND+2nbqOAJ9niQKH+
+                        Fm0nxpjl9lsbde97wPa/j55GrEOHJlkHvw7p4ZMklD7aXI/m4xNQBylZunwyOTDVFgzH9gDqq2g7
+                        203ZjbLyfGLcew7Yjrq0lt0puYx2aK6Aezm5lngKtbj0EqjRAcny5k89BAPHthxoKbcfARqF7t6J
+                        R1C/3YGBGlV076WumgC2RVDfqVMzQYaqahhtZ86/UYrbUXrLEhZHEaEmtTDXpculeeIw1KmW3kCN
+                        mlaqpfkIsLuF+kqdmtIbtV2ajynFu4Fa1qbH5B3qUPIwyTVg008j/+TUkljsCNRSFj0CNepZ8jDJ
+                        uQtwxw5APaKfRhZpHW1nzFeADdTIL23Uua2FO7EY6nG03e8N1Mg2vc332LwcllgM9ZT8QQ7AbeVD
+                        JDFQI1RbE9veUhIDNUL+wR0DNUKN6dKWk1lioEaoMVkzWx5bALXMLC7JCQTczSmxAOoncgF5JCuW
+                        wuIeoR5GrFMjf7U212lf20+TnqDOziYDauSrhurcg2DAjnhKC4UhyfFpEGDr89RAjULRhZ7J5y/Y
+                        evLJmLFGgemq65NY4g6hTiNmwFG46nQZLO4IaplAkIMHmSxDIWsddTRT3lUpzjPVCG1nyh+96LF1
+                        4oDJMoS2Srt4KUHcMtQXXd2hEHJM0m8vnAObvhqh/vrtNsGWvjpl/DqTJMhKr1/R9jU1v5PIJNA6
+                        d8PNt0YyRh/03424EXequRmXS2fA1vXqO8at9Tu+wPtDfmbgNjB2Q4X9TH8OCXWrauUZ7rgFqCUR
+                        eLijPZglCb53tR6qTyl9ibavmgXydiqtk6ZL8jbApgRvoWRTmHs9nUM3GQnkY4bE7pI8bnjgKcGb
+                        1cxct02V2Q1XZTcAbm9JHjc82JTgHgMN4O6U5E1uULkD6tqSvlmWQCa2Q/3mCuZ3lN9Vfufoz1l4
+                        VF6DJqvdRhybBzwauVuLQ9+7/CW0FbvhBl9LjWxcaQps2YgyZEwqu/SlCw5dojznzag18sHkwmnv
+                        pbjuewXqir20DKIvUOfKc0nMe4a3kkZa+fTn2GwbrSXrXgvTgnuPI86Lr9qa1ZpIq+vYTJhVG7RT
+                        36FW95bveKrfGRWXMFXLtSs7tvZSPxmD0lCf2/7S9Bacm/ecV9NJ1TatjmOzEQWoizq3fOdznLu0
+                        bjp1bJa3gBrnttu1qzr2DfEupeChfufcqGXWSoOtbp0S78KaAPVfcE+IRGGNdT6rdcfGrYtrFsLs
+                        dwW4JSasc7fIXKkem5nwUmpkB5HnPbc8NMQOtRZ67bKOjVsX04Zys5AuI2bKW2GvsGPj1qV07foD
+                        HR26Ns/wF9fHorvRyjj2V+JauAQH6uL9tsRqQSQKqfButEKOzZ7wUmr1vGhPXVv67CWRON7imdz6
+                        2KRjXwB1Ic2AupJryxLYjEgc1aDoWzuLOjazl8V04tMjmB279jBiDqdoq3d0tSUpEPARUBd2a6Cu
+                        7tprXLuQRspk7VKcSbNiuiUExLAjfa0Ftk6aXRDHo5rj1rh2h7qoBXbEpFlRfScExLJDHZ1EOwb2
+                        Z2J4VOu+39DhmWsvou2rjFANNpMDZfiQMrxYGU4IiGkf5bi2yqUdG6gpHYmpo732IbC/ELdCZTjP
+                        Wjdfjq8ox+uV48mBMpy16+NaEAJia2M5vs+xU2JWSD8IAbG1sRxPylo8wlWIrf3leLynFH8lXkdV
+                        +EkbVE0mDV8i9lFUysNkRzCZDS8mJs2IsQ0a6AGjR0vxM2JF0hFjt8vxXWCnxKmQfhECYmyJDjs2
+                        y1y4iWVaEIJCGr1f9kpw68ridE1krWu/B/sT8UHISZ3h2Di2K1oTgmqOHef6a6nRX4hPMcVGRKF9
+                        saeiWk7mHZtJM4Tcvgmmu8CmDC8XxCFRIMaWabQLbCbOyomkI8a26dMusAkiQh46Nj02sk08AFIH
+                        7F2byNFREbMOExUVU/YygYQyvLI+EAJibKGGgI2bEGNPY5aBzYw4SUeM/dCnPNhMUpTXgHXWVnvF
+                        IXlZLS/zYKfEo5KIG7G1uhRH1cRpM8TWTscu8q5dhKsQW6famFFCH1NLQ26M7SRmxEpNLdcG7Pri
+                        VUjE1EqwcZx64rhmYmqbRkyeNVOO0w82V4ZfUIbXl4DNtr36+koIKMNtUmzukE8RM5BN6CSO4zVh
+                        qOXW4tQ/iURtLSjFm9MNISCGNpXiqBmN2WJa263HRAKwcRxihwC7M9dm+bC8W49wa8C2XXeEgJjZ
+                        ADZ9YbNKjQNdEYbCbi2xSolEoxrGvGmhFcnrf05Z/joKtZjKMmJbM6W4I5JEfSQMR/UI1O2Bjau0
+                        I3lnMb3jfreW2DDR2I7WgN2urkwCjwnDX1BLTJiHaBls1K6mLIH9AbXEYkok6LF90BNw/4b6iXQA
+                        bF80CB3uHNRMlgE2cAM1AmzgBmr0G+wVYegc7mUIs+X6HdmA0r1WAvYv4tCLpj6vc+t3Y/a7H/2i
+                        FO9Xss699Ok5bvku8p0i1qkpxQPXSEvzKw+gvtLSm3V7C0rxDXGwou++k/PnXJxYk1Na9ey8O/pp
+                        K7QBbLuUqntPXSjPteyWPpoDMS0DO9YB4tFNOzUz161tj3/qTUeOMhozRPYpFgG2E5qb67sZrnnP
+                        QMth/nLuN2/qcARsSik3tM5BvuoI5lEO5iFDYL0WJjfO/8lqcuLhhAQsmXmWZTKBfGGuHzqY64ZA
+                        HupN/kx/ArNj/bX8IwP7mfLKScjHWZ9rgJQBXen1S39ucuXZQv+7fGUmM9jiyB/05yhiVtt1PefB
+                        XhMP5zVQh033ODERCqdd+/0QCGAj5BHYce6Ozi0dIceVTYjn94qztRQht/Wb4eS9hSOE3C7D34P9
+                        TFwQclrPu8BeEBeEnNZvhuP8v2UCDSF3lU2cvXfsP5pvhJBT+oPdZJ+VI4TcLMNF/+xrvpHz2hSo
+                        wIYRe8F90fMhsHFsN7TWK9sXno3byrRZlR7oeX19zfaNi1L9eQb8bjp2vGOAObPKPogF4B/6szK8
+                        daQPj0hefIp46su6/trkxOkhx87IB+x+S+h51PDjmHWlT4ctcqAPIx7vtNKt9zm2PL7JS9u7d+VO
+                        D1BowdHFDCR3PmMMnevy/ek68Z5BYj27O5gfbDvTrAHIxb3H0fbkFZy8/WoqPurYOjCPEQcvtKWZ
+                        OvMihC+rvfmXiIMP29Lc5NLl+3+5700g/xKvxt351lwfzSBMQoE6683lO8t31xisSYdGtZPV+EAp
+                        9ZOYNQO0SewZofgjv8S9byjTG9HHXaskyZ67rCQk20urSxxZJjROgHpnfs0kNubjBAevpb1Ln4de
+                        yveduFVyaCm1z/s+AxzAg9BeRuMD5RLleHFttOS+JxS1SvQrLdE5KbWYTvatqCQH7qbyP+A6x3Wv
+                        AQbq+g7+FkuNKTqs+aFl0mPvx2Z2/EB/Y65TE9zrPrZ4egz3RmJqPp5HzPNUZjM+UhoNtBynNPpT
+                        UnZ/IwydlOfftDxHf7Z+J4cMJTl296Qc3+nSQN2dg0usT3Hvv8rwg1ViUuAPeSCO215anqBxdS+3
+                        43BnTy/RexdkMi5YDkk5Pgy47JmwfGVNaS5bnacBt4d/PaJZ1bHfesrAS2+gtse954GX5oUq6KJg
+                        z6PwXrU7M9e5b09eeQK3jMm5jlFo1eO8MbC1UQ8piLf6sAbLWPbCvdGHS0KqJmdFczIu+icGtBNt
+                        wv5u5/rusfbdvuukaAVZtBTPyh+fE36jpTdQu+feMmaXnreLszJtYVzmT/bYtTOoWcpy27nlSKan
+                        yM8Z85MyYCdl/mT9gxdAjSx1bhnDcw+du/ShlkmFv+QWqBFwd6rSzCUVArfwxLWBGrhdcevSvMVV
+                        /iY9oO7J8YCxPdT/ntuHPD2vAnaVUjxzbZd3Y02AOgjnljydOPwVZlUPvoyr/o0Oz5CzTh2ec8vJ
+                        LHcO/uonVXc+JlX/RkfXtWdAHaRz3zuaq+vK37nmndClgxgKPRWDvHZuV144efQghdYcW++E8hc/
+                        OBKoc1I7eLkyU/5Q9zmFuInfwoHntZkBR1muppHdM+VrPZK5lpKGfhmbZx5vgRrlqsxFZPcmK7tY
+                        khf5vdqnJ1IZ7cnXJwvztbHXV8cNBsq2ibSNluBr0hjtyFdpHZeW5etJU2cAJI3dIba/kE0lzi1Q
+                        owP5urYwX+2d2LOkxKEER0Hna9xCoPoucSjBUfD5mjR+p+i/xHkAalQyX/vci9FKyxi39dtqeZF2
+                        HKRG1gBRkM7dx14MeSSzlY1TSYu/dB9nUE1IUeRI7myUkcgpsHWGr+tgfSE/kSO54/bx1qbEuet4
+                        hnFKjqKSOTrtOEfvfAncsmu4dcMMQofyctAD1MsuvlvcVQCj7nelvZ17xds80IGclAneLh/jbHR3
+                        WS899o5++7LjsXs7YxrnRpZALbr00mjkiJoedvW86EHyCL29VEBzomtdMVHRDtxj0jp4qMc9QT0N
+                        JcDL1370jfQOFupvPeXcMqQgD3qE+5G+Owot1/o6K2AZXK7J5vueyiLRT/ruYPrpnz3l2Is+YMJE
+                        BhMaqMHcuuoxr5iwVbh7fRY22Durv5Vg389YUw3mZitfe77DjhkJL/LopedcIo8sgxv3xqWB2mO4
+                        X+i9neulX4AauMssVaSMiLV5kva4ZArUjsOdPSlGeW5X2T21KD+A2mG4X3TnEhtb+suHQY+7x4C6
+                        4cEcWdI/AXj/QNuWByxpeQY3gIcLNFC30FctX+0TgIcDdDahynxLCwNuI9z5STbu5PUqs6nF47vk
+                        Bt5uAtg8+FkCjEmCwjfrseU37LebNqPVTUJcvdqvF1x87/ilGpsXB8bRyZnv2OXkMD/kfcIuOOPa
+                        XHNzfY/jeBVqqR1tz+6+iLp/40YVvZ3TZ8ZrAdg9lHJRP4fSNQH5D5M0c89hFojPHII5k/Mn3Mae
+                        JJAcwO7q/u43yKPte5xWjo+D3GDTHMwu6t6Mw7XrTHgBds4dpo6U5ofKv1UGuny21TW0WsqDPPIg
+                        9hNfqihvwM4l22PU/Vs+2y7d1wp79rkz4HMAD/U6y332RYvIszO/vQI7l4xSlt847iBFe8GNwv7f
+                        d65fRnm3/Y9CO3Bs7qKqS8v7qe99+2KxryOmO4Smnrk3atalJ228dN4GJb6OmgyYvlT8Our+Pd3I
+                        bpe+ltzwFWqvHXtHnyjufUFeB6155Pp7qQF7J+CpAj4kx4PSWoFehPKFk5BGVwbWXCfm4y3leTBl
+                        t0yOnYQEdXCOvaM8l40tY/LfS820lw7yBp6EOuoy4OaamI8n2nshf4AWh56ECnXQYOcAl9nzS/NR
+                        ZtAXcOGsZOzOFeh18HlNPvxVoqfRdnNLSjScAfo2tB4asKsDPlTA6cHtLblvcWfArgP4VwWcU1H6
+                        1UaBfgBowG4KcIH6QiHnVJRuJXvfH8w1D3lCDLDbh3ykgF/g4q2681zdeUU4ALsPF/8csV21KQnM
+                        /+LOgG1TLy5wf6FUr1Rqf1eY6Z0B22rIU5y8kDMvgBmwXQU9O9QvDdjNxZUXUQCHOAJ22G7+yXPQ
+                        f4Osrky/DNjBwZ7mYB86CLtALOX0s0K8YFQBG+2HfaiXAD+I+t/mKsBuFGABeQ3EgI2agz47fDB/
+                        4OCHA06f3SCi6P8nne5z3l+5zwLxhnVk9/Q/AQYAZqlvU1uoaW4AAAAASUVORK5CYII=" transform="matrix(1 0 0 1 6 6)">
+                        </image>
                         </svg>
+                        
+
                         My WINWIN</a>
                   </li>
                   <li class="mr-6 text-gray-200">
