--- a/login.html
+++ b/login.html
@@ -18,7 +18,21 @@
 <div class="container-fluid">
 
     <div class="row align-self-center">
-<div class="col-lg-6 min-h-full  col-md-6 bg-signup"></div>
+<div class="col-lg-6 min-h-full p-0 col-md-6 bg-signup">
+<div class="row m-0 loginslide">
+    <div class="col-lg-12 p-0">
+        <img src="assets/img/bg-signup.png" />
+    </div>
+    <div class="col-lg-12 p-0">
+        <img src="assets/img/bg-signup.png" />
+    </div>
+    <div class="col-lg-12 p-0">
+        <img src="assets/img/bg-signup.png" />
+    </div>
+
+</div>
+
+</div>
 <div class="col-lg-6 min-h-full my-auto mx-auto  col-md-6 p-0 bg-relogin">
 <div class="container-fluid">
     <div class="row justify-content-center">
@@ -88,6 +102,10 @@
 
 
 
-
+<script type="text/javascript" src="assets/js/jquery.js"></script>
+<script type="text/javascript" src="assets/js/slick.min.js"></script>
+<script type="text/javascript" src="assets/js/bootstrap.js"></script>
+<script type="text/javascript" src='assets/js/main.js'></script>
+<script type="text/javascript" src='assets/js/custom.js'></script>
 </body>
 </html>
