--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
 <div class="container-fluid">
 
     <div class="row align-self-center">
-<div class="col-lg-6 min-h-full p-0 col-md-6 bg-signup">
+<div style="position: fixed;" class="col-lg-6 min-h-full p-0 col-md-6 bg-signup">
 <div class="row m-0 loginslide">
     <div class="col-lg-12 p-0">
         <img src="assets/img/bg-signup.png" />
@@ -33,7 +33,8 @@
 </div>
 
 </div>
-<div class="col-lg-6 min-h-full my-auto mx-auto  col-md-6 p-0 bg-relogin">
+<div class="col-lg-6 col-md-6"></div> 
+<div class="col-lg-6 min-h-full my-auto mx-auto col-md-6 p-0 bg-relogin">
 <div class="container-fluid">
     <div class="row justify-content-center">
 
