--- a/register.html
+++ b/register.html
@@ -44,7 +44,8 @@
             
                         <div class="row justify-content-center">
                             <div class="col-lg-5 col-md-5 col-sm-5 text-center mt-5">
-                                <a href="/" class="text-white font-bold rounded text-center text-xl "><img class="logo-size m-auto" src="assets/img/logo.png" /></a>
+                                <a href="/" class="text-white d-none d-sm-none d-lg-block d-md-block font-bold rounded text-center text-xl "><img class="logo-size m-auto" src="assets/img/logo.png" /></a>
+                                <a href="/" class="text-white d-md-none  d-sm-block font-bold rounded text-center text-xl "><img class="logo-size m-auto" src="assets/img/logo-white.png" /></a>
                             </div>
                         </div>
                         <div class="row justify-content-center">
