--- a/login.html
+++ b/login.html
@@ -29,6 +29,12 @@
     <div class="col-lg-12 p-0">
         <img src="assets/img/bg-signup.png" />
     </div>
+    <div class="col-lg-12 p-0">
+        <img src="assets/img/bg-signup.png" />
+    </div>
+    <div class="col-lg-12 p-0">
+        <img src="assets/img/bg-signup.png" />
+    </div>
 
 </div>
 
@@ -43,7 +49,7 @@
                 <div class="card-body">
                   
                         <div class="row justify-content-center">
-                            <div class="col-lg-5 col-md-5 col-sm-5 text-center mt-5">
+                            <div class="col-lg-5 col-md-5 col-sm-5 col-7 text-center mt-5">
                                 <a href="/" class="text-white d-none d-sm-none d-lg-block d-md-block font-bold rounded text-center text-xl "><img class="logo-size m-auto" src="assets/img/logo.png" /></a>
                                 <a href="/" class="text-white d-md-none  d-sm-block font-bold rounded text-center text-xl "><img class="logo-size m-auto" src="assets/img/logo-white.png" /></a>
                             </div>
