--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="col-lg-3">
                <ul class=" mr-auto mt-2-resp-only row">
-                  <li class="nav-item px-3 col-4 text-center active"> 
+                  <li class="nav-item px-3 col-4 text-left active"> 
                    <div class="dropdown">
                  
                       <a class="relative inline-block dropdown-toggle text-gray-400 text-white no-underline hover:text-gray-300 pt-2-resp-m px-2" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
@@ -1465,7 +1465,7 @@ AAAASUVORK5CYII=" transform="matrix(1 0 0 1 6 6)">
          </div>
          <div class="row d-block d-md-none mt-3">
             <div class="col-lg-12">
-               <a href="#" class="font-bold break-normal text-gray-900 text-xltitle-resp">SEE MORE</a>
+               <a href="#" class="font-bold break-normal text-gray-900 text-xs">SEE MORE</a>
             </div>
          </div> 
 
@@ -1569,7 +1569,7 @@ AAAASUVORK5CYII=" transform="matrix(1 0 0 1 6 6)">
 
          <div class="row d-block d-md-none mt-3">
             <div class="col-lg-12">
-               <a href="#" class="font-bold break-normal text-gray-900 text-xltitle-resp">SEE MORE</a>
+               <a href="#" class="font-bold break-normal text-gray-900 text-xs">SEE MORE</a>
             </div>
          </div> 
 
@@ -1598,7 +1598,7 @@ AAAASUVORK5CYII=" transform="matrix(1 0 0 1 6 6)">
 
          <div class="row d-block d-md-none mt-3">
             <div class="col-lg-12">
-               <a href="#" class="font-bold break-normal text-gray-900 text-xltitle-resp">SEE MORE</a>
+               <a href="#" class="font-bold break-normal text-gray-900 text-xs">SEE MORE</a>
             </div>
          </div> 
 
@@ -1704,7 +1704,7 @@ AAAASUVORK5CYII=" transform="matrix(1 0 0 1 6 6)">
 
          <div class="row d-block d-md-none mt-3">
             <div class="col-lg-12">
-               <a href="#" class="font-bold break-normal text-gray-900 text-xltitle-resp">SEE MORE</a>
+               <a href="#" class="font-bold break-normal text-gray-900 text-xs">SEE MORE</a>
             </div>
          </div> 
 
