--- a/dashboard.html
+++ b/dashboard.html
@@ -22,7 +22,7 @@
          
          <div class="row m-auto w-full">
             <div class="col-lg-9">
-               <input type="search" placeholder="Search games, odds or leagues" class="w-full bg-gray-100 text-sm text-gray-800 transition border focus:outline-none focus:shadow-lg focus:bg-gray-300 rounded py-2 px-2 pl-3 appearance-none leading-normal pr-6">
+               <input type="search" placeholder="search for games, merchants, odds or leagues" class="w-full bg-gray-100 text-sm text-gray-800 transition border focus:outline-none focus:shadow-lg focus:bg-gray-300 rounded py-2 px-2 pl-3 appearance-none leading-normal pr-6">
                <div class="absolute search-icon" style="top: 0.4px;right: 15px;">
                   <button class="bg-secondary hover:bg-secondary focus:bg-secondary text-white font-bold py-2 px-4 rounded">
                     <svg class="fill-current pointer-events-none text-gray-800 w-4 h-1re" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
