--- a/dashboard.html
+++ b/dashboard.html
@@ -425,7 +425,7 @@ lMno15X6w0f+2mU6L9Jx5R6p5vi/AAMAZ1i0E7oUJckAAAAASUVORK5CYII=" transform="matrix(
                   <h2 class="font-bold break-normal text-gray-900 text-2xl mt-2 md:text-xl">FROM YOUR MERCHANTS</h2>
                 
                </div>
-               <div class="col-lg-4 text-right">
+               <div class="col-lg-4 text-right-res">
                   <button class="-mt-2 bg-transparent hover:shadow-lg hover:bg-gray-200 focus:outline-none text-primary font-semibold  hover:bg-gray-200 py-2 px-4 border border-primary px-8 rounded">
                      MORE
                    </button>   
