--- a/index.html
+++ b/index.html
@@ -243,18 +243,27 @@ lMno15X6w0f+2mU6L9Jx5R6p5vi/AAMAZ1i0E7oUJckAAAAASUVORK5CYII=" transform="matrix(
 
       <!--Container-->
       <div class="container overflow-x">
-         <div class="row adslide mb-10 m-0-15-resp">
+         <div class="row adslide mb-10 d-none d-md-block d-lg-block m-0-15-resp">
             <div><img  src="assets/img/bannerone.png" /></div>
             <div><img  src="assets/img/bannerone.png" /></div>
             <div><img  src="assets/img/bannerone.png" /></div>
             <div><img  src="assets/img/bannerone.png" /></div>
          </div>
+         <div class="row adslide mb-10 d-md-none d-lg-none d-sm-block m-0-15-resp">
+            <div><img  src="assets/img/live-action.jpg" /></div>
+            <div><img  src="assets/img/live-action.jpg" /></div>
+            <div><img  src="assets/img/live-action.jpg" /></div>
+            <div><img  src="assets/img/live-action.jpg" /></div>
+         </div>
+
+         
+
           <div class="row d-block mt-5 mb-4">
             <div class="col-lg-12"><hr /></div>
           </div> 
          <div class="row m-0 justify-between">
             <h2 class="font-bold break-normal text-gray-900 text-xltitle-resp">HOT ODDS</h2>
-            <button class="-mt-2 d-none d-md-block bg-transparent hover:shadow-lg hover:bg-gray-200 focus:outline-none text-primary font-semibold  hover:bg-gray-200 p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
+            <button class="-mt-2 d-none d-md-block hover:shadow-lg hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
                MORE
              </button>
          </div>
@@ -357,7 +366,7 @@ lMno15X6w0f+2mU6L9Jx5R6p5vi/AAMAZ1i0E7oUJckAAAAASUVORK5CYII=" transform="matrix(
 
          <div class="row m-0 justify-between">
             <h2 class="font-bold break-normal text-gray-900 text-xltitle-resp">TRENDING NOW</h2>
-            <button class="-mt-2 d-none d-md-block bg-transparent hover:shadow-lg hover:bg-gray-200 focus:outline-none text-primary font-semibold  hover:bg-gray-200 p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
+            <button class="-mt-2 d-none d-md-block hover:shadow-lg hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
                MORE
              </button>
          </div>         
@@ -465,7 +474,7 @@ lMno15X6w0f+2mU6L9Jx5R6p5vi/AAMAZ1i0E7oUJckAAAAASUVORK5CYII=" transform="matrix(
 
          <div class="row m-0 justify-between">
             <h2 class="font-bold break-normal text-gray-900 text-xltitle-resp">UPCOMING</h2>
-            <button class="-mt-2 d-none d-md-block bg-transparent hover:shadow-lg hover:bg-gray-200 focus:outline-none text-primary font-semibold  hover:bg-gray-200 p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
+            <button class="-mt-2 d-none d-md-block hover:shadow-lg hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
                MORE
              </button>
          </div>         
@@ -492,7 +501,7 @@ lMno15X6w0f+2mU6L9Jx5R6p5vi/AAMAZ1i0E7oUJckAAAAASUVORK5CYII=" transform="matrix(
 
          <div class="row m-0 justify-between">
             <h2 class="font-bold break-normal text-gray-900 text-xltitle-resp">THIS WEEK</h2>
-            <button class="-mt-2 d-none d-md-block bg-transparent hover:shadow-lg hover:bg-gray-200 focus:outline-none text-primary font-semibold  hover:bg-gray-200 p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
+            <button class="-mt-2 d-none d-md-block hover:shadow-lg hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
                MORE
              </button>
          </div>         
