--- a/dashboard.html
+++ b/dashboard.html
@@ -423,7 +423,7 @@ lMno15X6w0f+2mU6L9Jx5R6p5vi/AAMAZ1i0E7oUJckAAAAASUVORK5CYII=" transform="matrix(
 <div class="container-fluid">
           <div class="row mt-5 m-0 justify-between">
                <h2 class="font-bold break-normal text-gray-900 text-xltitle-resp">FROM YOUR MERCHANTS</h2>
-               <button class="-mt-2 d-none d-md-block bg-transparent hover:shadow-lg hover:bg-gray-200 focus:outline-none text-primary font-semibold  hover:bg-gray-200 p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
+               <button class="-mt-2 d-none d-md-block hover:shadow-lg hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
                   MORE
                 </button>
             </div>
