--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
          <div class="row m-auto w-full">
             <div class="col-lg-9">
                <input type="search" placeholder="search for games, merchants, odds or leagues" class="w-full bg-gray-100 text-sm text-gray-800 transition border focus:outline-none focus:shadow-lg focus:bg-gray-300 rounded py-2 px-2 pl-3 appearance-none leading-normal pr-6">
-               <div class="absolute search-icon" style="top: 0.4px;right: 15px;">
+               <div class="absolute search-icon" style="top: 0px;right: 15px;">
                   <button class="bg-secondary hover:bg-secondary focus:bg-secondary text-white font-bold py-2 px-4 rounded">
                     <svg class="fill-current pointer-events-none text-gray-800 w-4 h-1re" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
                        <path d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"></path>
@@ -194,8 +194,8 @@ lMno15X6w0f+2mU6L9Jx5R6p5vi/AAMAZ1i0E7oUJckAAAAASUVORK5CYII=" transform="matrix(
                     </div>     
                 
                 </li>
-                <li class="nav-item col-4 text-center px-3">
-                   <button class="navbar-toggler block bg-secondary flex items-center px-3 py-2 ml-10 rounded text-gray-500 border-gray-600 hover:text-gray-900 hover:border-purple-500 appearance-none focus:outline-none" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">  <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                <li class="nav-item col-4 text-right px-3">
+                   <button class="navbar-toggler bg-secondary items-center px-3 py-2 ml-10 rounded text-gray-500 border-gray-600 hover:text-gray-900 hover:border-purple-500 appearance-none focus:outline-none" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">  <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                       <title>Menu</title>
                       <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/>
                    </svg></button>   
@@ -250,10 +250,10 @@ lMno15X6w0f+2mU6L9Jx5R6p5vi/AAMAZ1i0E7oUJckAAAAASUVORK5CYII=" transform="matrix(
             <div><img  src="assets/img/bannerone.png" /></div>
          </div>
          <div class="row adslide mb-10 d-md-none d-lg-none d-sm-block m-0-15-resp">
-            <div><img  src="assets/img/live-action.jpg" /></div>
-            <div><img  src="assets/img/live-action.jpg" /></div>
-            <div><img  src="assets/img/live-action.jpg" /></div>
-            <div><img  src="assets/img/live-action.jpg" /></div>
+            <div><img  src="assets/img/bannerone-mobile.png" /></div>
+            <div><img  src="assets/img/bannerone-mobile.png" /></div>
+            <div><img  src="assets/img/bannerone-mobile.png" /></div>
+            <div><img  src="assets/img/bannerone-mobile.png" /></div>
          </div>
 
          
@@ -263,7 +263,7 @@ lMno15X6w0f+2mU6L9Jx5R6p5vi/AAMAZ1i0E7oUJckAAAAASUVORK5CYII=" transform="matrix(
           </div> 
          <div class="row m-0 justify-between">
             <h2 class="font-bold break-normal text-gray-900 text-xltitle-resp">HOT ODDS</h2>
-            <button class="-mt-2 d-none d-md-block hover:shadow-lg hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
+            <button class="-mt-2 d-none d-md-block hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
                MORE
              </button>
          </div>
@@ -366,7 +366,7 @@ lMno15X6w0f+2mU6L9Jx5R6p5vi/AAMAZ1i0E7oUJckAAAAASUVORK5CYII=" transform="matrix(
 
          <div class="row m-0 justify-between">
             <h2 class="font-bold break-normal text-gray-900 text-xltitle-resp">TRENDING NOW</h2>
-            <button class="-mt-2 d-none d-md-block hover:shadow-lg hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
+            <button class="-mt-2 d-none d-md-block hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
                MORE
              </button>
          </div>         
@@ -474,7 +474,7 @@ lMno15X6w0f+2mU6L9Jx5R6p5vi/AAMAZ1i0E7oUJckAAAAASUVORK5CYII=" transform="matrix(
 
          <div class="row m-0 justify-between">
             <h2 class="font-bold break-normal text-gray-900 text-xltitle-resp">UPCOMING</h2>
-            <button class="-mt-2 d-none d-md-block hover:shadow-lg hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
+            <button class="-mt-2 d-none d-md-block hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
                MORE
              </button>
          </div>         
