--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ lMno15X6w0f+2mU6L9Jx5R6p5vi/AAMAZ1i0E7oUJckAAAAASUVORK5CYII=" transform="matrix(
           </div> 
          <div class="row m-0 justify-between">
             <h2 class="font-bold break-normal text-gray-900 text-xltitle-resp">HOT ODDS</h2>
-            <button class="-mt-2 d-none d-md-block hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
+            <button onclick="location.href='/category-hotodds.html'" class="-mt-2 d-none d-md-block hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
                MORE
              </button>
          </div>
@@ -366,7 +366,7 @@ lMno15X6w0f+2mU6L9Jx5R6p5vi/AAMAZ1i0E7oUJckAAAAASUVORK5CYII=" transform="matrix(
 
          <div class="row m-0 justify-between">
             <h2 class="font-bold break-normal text-gray-900 text-xltitle-resp">TRENDING NOW</h2>
-            <button class="-mt-2 d-none d-md-block hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
+            <button onclick="location.href='/category-trending.html'" class="-mt-2 d-none d-md-block hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-4 border border-primary px-8 rounded">
                MORE
              </button>
          </div>         
