--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
       <meta http-equiv='X-UA-Compatible' content='IE=edge'>
       <title>Naija Win Win</title>
       <meta name='viewport' content='width=device-width, initial-scale=1'>
-      <link rel="stylesheet" type='text/css' href="assets/css/bootstrap.min.css">
-      <link rel="stylesheet" type='text/css' href="assets/css/tailwind.min.css">
-      <link rel="stylesheet" type='text/css' href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="stylesheet" type='text/css' href="assets/css/themeb.min.css">
+      <link rel="stylesheet" type='text/css' href="assets/css/themet.min.css">
       <link rel="stylesheet" type="text/css" href="assets/css/slick.css"/>
       <link rel="stylesheet" type="text/css" href="assets/css/slick-theme.css"/>
       <link rel='stylesheet' type='text/css' href="assets/css/main.css">
-     
   </head>
    <body class="tracking-wider tracking-normal">
       <header class="w-full z-10 top-0 bg-primary pt-1">
@@ -213,7 +211,7 @@ lMno15X6w0f+2mU6L9Jx5R6p5vi/AAMAZ1i0E7oUJckAAAAASUVORK5CYII=" transform="matrix(
             <div  class="w-full bg-primary-alt shadow-md  lg:block md:block">
                <ul class="container mx-auto list-reset flex:column lg:flex md:flex xs:flex text-xs bounce-in-right">
                   <li class="mr-6 text-gray-200">
-                     <a href="#" class="p-3 block hover:bg-primary">
+                     <a href="home.html" class="p-3 block hover:bg-primary">
                      <img class="ic-msize" src="/assets/img/faq.svg" />
                         FAQ's</a>
                   </li>
@@ -665,10 +663,12 @@ lMno15X6w0f+2mU6L9Jx5R6p5vi/AAMAZ1i0E7oUJckAAAAASUVORK5CYII=" transform="matrix(
  
 
   
+  
        <script type="text/javascript" src="assets/js/jquery.js"></script>
-       <script type="text/javascript" src="assets/js/bootstrap.js"></script>
+       <script type="text/javascript" src="assets/js/themeb.js"></script>
        <script type="text/javascript" src="assets/js/slick.min.js"></script>
        <script type="text/javascript" src='assets/js/custom.js'></script>
+       <script type="text/javascript" src="assets/js/main.js"></script>
    </body>
 </html>
 
