--- a/login.html
+++ b/login.html
@@ -5,13 +5,11 @@
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <title>Naija Win Win</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <link rel="stylesheet" type='text/css' href="assets/css/bootstrap.min.css">
-        <link rel="stylesheet" type='text/css' href="assets/css/tailwind.min.css">
-        <link rel="stylesheet" type='text/css' href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" type='text/css' href="assets/css/themeb.min.css">
+        <link rel="stylesheet" type='text/css' href="assets/css/themet.min.css">
         <link rel="stylesheet" type="text/css" href="assets/css/slick.css"/>
         <link rel="stylesheet" type="text/css" href="assets/css/slick-theme.css"/>
         <link rel='stylesheet' type='text/css' href="assets/css/main.css">
-       
     </head>
 <body>
 
@@ -106,13 +104,12 @@
 </div>
 
 
-
-
+  
 <script type="text/javascript" src="assets/js/jquery.js"></script>
+<script type="text/javascript" src="assets/js/themeb.js"></script>
 <script type="text/javascript" src="assets/js/slick.min.js"></script>
-<script type="text/javascript" src="assets/js/bootstrap.js"></script>
-<script type="text/javascript" src='assets/js/main.js'></script>
 <script type="text/javascript" src='assets/js/custom.js'></script>
+<script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
 
